comentarios de issue integrados

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -8,9 +8,18 @@
     "SEARCH_MESSAGE":"Search by github user",
     "LANGUAJE":"languages",
     "CREATE":"Create",
+    "UPDATE":"Update",
     "LABEL":"Label",
     "ISSUE_TITLE":"Issue",
     "NO_ISSUE_TITLE":"No issue",
-    "STATE":"State"
+    "STATE":"State",
+    "CLOSE":"Close",
+    "CREATE_BY":"Create by",
+    "COMMENTS":"Comment",
+    "YES":"Yes",
+    "NO":"No",
+    "OPEN_ISSUES":"Open issues",
+    "PRIVATE":"Private",
+    "SEE_COMMENTS":"Watch issues comment"
   }
 }
