--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -6,25 +6,32 @@
     "SEE_IN_GITHUB":"Watch in GitHub",
     "SEE_ISSUES":"Watch Repo issues",
     "TAGS":"Watch Repo tags",
+    "SUNBSCRIBERS":"Watch Repo subscribers",
     "SEARCH_MESSAGE":"Search by github user",
     "LANGUAJE":"languages",
     "CREATE":"Create",
     "UPDATE":"Update",
     "LABEL":"Label",
     "ISSUE_TITLE":"Issue",
+    "SUBSCRIBERS_TITLE":"Subscribers",
     "TAG_TITLE":"Tags",
+    "COMMENTS_TITLE":"Comment",
     "NO_ISSUE_TITLE":"No issue",
-    "NO_TAGS":"No tags",
+    "NO_TAGS_TITLE":"No tags",
+    "NO_SUBSCRIBERS_TITLE":"No subscribers",
+    "NO_COMMENT_TITLE":"No commets",
     "STATE":"State",
     "CLOSE":"Close",
     "CREATE_BY":"Create by",
-    "COMMENTS":"Comment",
     "YES":"Yes",
     "NO":"No",
     "OPEN_ISSUES":"Open issues",
     "PRIVATE":"Private",
     "SEE_COMMENTS":"Watch issues comment",
     "AUTHOR_ASSOCIATION":"Author association",
-    "COMMIT":"Commit"
+    "COMMIT":"Commit",
+    "PUSHED":"Pushed",
+    "LICENCE":"Licente"
+
   }
 }
