--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -36,6 +36,7 @@
   },
   "ERRORS":{
     "ERROR_LOAD_REPOS":"error loading repos",
-    "ERROR_LOAD_SUBSCRIBERS":"error loading subscribers"
+    "ERROR_LOAD_SUBSCRIBERS":"error loading subscribers",
+    "ERROR_LOAD_TAGS":"error loading tags"
   }
 }
